Stylus pressure splike on first dab #85844

Closed
opened 2021-02-21 14:44:25 +01:00 by 炎臻 · 28 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40

Blender Version
Broken: version: 2.92.0 Release Candidate, branch: master, commit date: 2021-02-19 18:02, hash: b1142858d4
Worked: 2.91.2

Short description of error
When using stylus(me wacom CTL-690),the first dab of a stroke has a too high pressure amount regardless of the actual pressure input.
The left stroke of each pair in the following pictures is drawn within Blender 2.92.0 and the right one is 2.91.2:
Pic1.png Pic2.png As what I have tested,sculpting,texture paint,weight paint and grease pencil all get influenced.

Exact steps for others to reproduce the error
{icon fa-plus} OS Conditon: WIN 10 |Blender: 2.92.0 Candidate|Tablet: Wacom CTL-690

  • Using stylus to draw a stroke in sculpt mode , texture paint mode , weight paint mode or grease pencil draw mode .Try having the pressure initially low,then the first dab drawn should get a high pressure amount which is false.
    {icon rocket} In case,this is the blend file which is used to capture the pictures above:BugReport.blend
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40 **Blender Version** Broken: version: 2.92.0 Release Candidate, branch: master, commit date: 2021-02-19 18:02, hash: `b1142858d4` Worked: 2.91.2 **Short description of error** When using stylus(me wacom CTL-690),the first dab of a stroke has a too high pressure amount regardless of the actual pressure input. The left stroke of each pair in the following pictures is drawn within Blender 2.92.0 and the right one is 2.91.2: ![Pic1.png](https://archive.blender.org/developer/F9825360/Pic1.png) ![Pic2.png](https://archive.blender.org/developer/F9825375/Pic2.png) As what I have tested,sculpting,texture paint,weight paint and grease pencil all get influenced. **Exact steps for others to reproduce the error** {icon fa-plus} OS Conditon: **WIN 10** |Blender: **2.92.0 Candidate**|Tablet: **Wacom CTL-690** - Using stylus to draw a stroke in __sculpt mode__ , __texture paint mode__ , __weight paint mode__ or __grease pencil draw mode__ .Try having the pressure initially low,then the first dab drawn should get a high pressure amount which is false. {icon rocket} In case,this is the blend file which is used to capture the pictures above:[BugReport.blend](https://archive.blender.org/developer/F9825440/BugReport.blend)
Author

Added subscriber: @PrettyFireNOI7

Added subscriber: @PrettyFireNOI7

#85901 was marked as duplicate of this issue

#85901 was marked as duplicate of this issue

#85902 was marked as duplicate of this issue

#85902 was marked as duplicate of this issue

#85747 was marked as duplicate of this issue

#85747 was marked as duplicate of this issue

#85851 was marked as duplicate of this issue

#85851 was marked as duplicate of this issue

#85863 was marked as duplicate of this issue

#85863 was marked as duplicate of this issue

Added subscriber: @PrototypeNM1

Added subscriber: @PrototypeNM1

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Note to anyone looking into this issue:

This issue is a result of Win32 mouse input not being synchronized with Wintab pressure. This has been an issue before 2.92, and has reappeared because the heuristics which discourage it from happening no longer work as well because Win32 mouse input was modified to support more accurate mouse movement (smooth lines when drawing).

There is no good long term fix, the issue is how Wintab works and the compromises to support current workflows in Blender.

The fix for this issue is to use Windows Ink (may require restarting Blender).

Note to anyone looking into this issue: This issue is a result of Win32 mouse input not being synchronized with Wintab pressure. This has been an issue before 2.92, and has reappeared because the heuristics which discourage it from happening no longer work as well because Win32 mouse input was modified to support more accurate mouse movement (smooth lines when drawing). There is no good long term fix, the issue is how Wintab works and the compromises to support current workflows in Blender. The fix for this issue is to use Windows Ink (may require restarting Blender).
Author

This issue might needs other stylus or Wacom tablet users.I can't find a way to enable Windows Ink only while keeping my tablet functioning.
"Use Windows Ink" setting in Wacom driver can't fix this problem and possibly my tablet is too old to work correctly without Wacom driver.

This issue might needs other stylus or Wacom tablet users.I can't find a way to enable Windows Ink only while keeping my tablet functioning. "Use Windows Ink" setting in Wacom driver can't fix this problem and possibly my tablet is too old to work correctly without Wacom driver.

Added subscriber: @kursadk

Added subscriber: @kursadk
Member

Added subscribers: @roman-13, @lichtwerk

Added subscribers: @roman-13, @lichtwerk
Member

Added subscribers: @Harti, @Phigon

Added subscribers: @Harti, @Phigon
Member

Added subscribers: @dfelinto, @brecht

Added subscribers: @dfelinto, @brecht
Member

@PrototypeNM1 : is this really Low priority?
(Looks like this is a regression?)

CC @brecht
CC @dfelinto

@PrototypeNM1 : is this really `Low` priority? (Looks like this is a regression?) CC @brecht CC @dfelinto

@PrototypeNM1 please revert all high frequency mouse input changes as well then.

Correct tablet input is more important than high frequency mouse input.

@PrototypeNM1 please revert all high frequency mouse input changes as well then. Correct tablet input is more important than high frequency mouse input.
Member

In #85844#1116568, @PrettyFireNOI7 wrote:
This issue might needs other stylus or Wacom tablet users.I can't find a way to enable Windows Ink only while keeping my tablet functioning.
"Use Windows Ink" setting in Wacom driver can't fix this problem and possibly my tablet is too old to work correctly without Wacom driver.

Blender offers an option to choose "Windows Ink" under "Input" settings, see if you are able to change it.

> In #85844#1116568, @PrettyFireNOI7 wrote: > This issue might needs other stylus or Wacom tablet users.I can't find a way to enable Windows Ink only while keeping my tablet functioning. > "Use Windows Ink" setting in Wacom driver can't fix this problem and possibly my tablet is too old to work correctly without Wacom driver. Blender offers an option to choose "Windows Ink" under "Input" settings, see if you are able to change it.
Member

! In #85844#1116544, @PrototypeNM1 wrote:
Note to anyone looking into this issue:

This issue is a result of Win32 mouse input not being synchronized with Wintab pressure. This has been an issue before 2.92, and has reappeared because the heuristics which discourage it from happening no longer work as well because Win32 mouse input was modified to support more accurate mouse movement (smooth lines when drawing).

There is no good long term fix, the issue is how Wintab works and the compromises to support current workflows in Blender.

The fix for this issue is to use Windows Ink (may require restarting Blender).

I do not think that Windows Ink can handle multiple devices properly , as in using Blender with one device initially (Intuos pro) then turning on another device and keep using the open Blender in another device (Wacom Cintiq). My tests show that Blender cant utilize the pressure when I change to Wacom Cintiq while Windows Ink is the main driver.

Can Windows Ink in Blender handle transient usages between multiple pen devices like this in the same opened session?

>>! In #85844#1116544, @PrototypeNM1 wrote: > Note to anyone looking into this issue: > > This issue is a result of Win32 mouse input not being synchronized with Wintab pressure. This has been an issue before 2.92, and has reappeared because the heuristics which discourage it from happening no longer work as well because Win32 mouse input was modified to support more accurate mouse movement (smooth lines when drawing). > > There is no good long term fix, the issue is how Wintab works and the compromises to support current workflows in Blender. > > The fix for this issue is to use Windows Ink (may require restarting Blender). I do not think that Windows Ink can handle multiple devices properly , as in using Blender with one device initially (Intuos pro) then turning on another device and keep using the open Blender in another device (Wacom Cintiq). My tests show that Blender cant utilize the pressure when I change to Wacom Cintiq while Windows Ink is the main driver. Can Windows Ink in Blender handle transient usages between multiple pen devices like this in the same opened session?
Nicholas Rishel self-assigned this 2021-02-22 19:44:13 +01:00
Author

In #85844#1117075, @kursadk wrote:

In #85844#1116568, @PrettyFireNOI7 wrote:
This issue might needs other stylus or Wacom tablet users.I can't find a way to enable Windows Ink only while keeping my tablet functioning.
"Use Windows Ink" setting in Wacom driver can't fix this problem and possibly my tablet is too old to work correctly without Wacom driver.

Blender offers an option to choose "Windows Ink" under "Input" settings, see if you are able to change it.

Thank you for the information,had never known there is a setting.I got a solution currently from that and this solves the pressure first-spike and the drawing glitches(#85733) for my Wacom CTL-690.f1.png After changing Blender Tablet API from "Aotomatic" to "Windows Ink" in the preference (restarting Blender might be needed):f2.png If Blender the application is specified in the Wacom driver,make sure the "Use Windows Ink" check box is on in the Mapping tab,according to Wacom Guide this setting will let the tablet get the proper pressure input ( if the setting is not checked,stylus will have no pressure in Blender) : f3.png If Blender is not specified in the Wacom driver,check "Use Windows Ink" setting in the "All Other Applications" Mapping tab.
Issue happens while the Tablet API in Blender is set to Wintab.

> In #85844#1117075, @kursadk wrote: >> In #85844#1116568, @PrettyFireNOI7 wrote: >> This issue might needs other stylus or Wacom tablet users.I can't find a way to enable Windows Ink only while keeping my tablet functioning. >> "Use Windows Ink" setting in Wacom driver can't fix this problem and possibly my tablet is too old to work correctly without Wacom driver. > > Blender offers an option to choose "Windows Ink" under "Input" settings, see if you are able to change it. Thank you for the information,had never known there is a setting.I got a solution currently from that and this solves the pressure first-spike and the drawing glitches(#85733) for my Wacom CTL-690.![f1.png](https://archive.blender.org/developer/F9829059/f1.png) After changing Blender __Tablet API__ from "__Aotomatic__" to "__Windows Ink__" in the preference (restarting Blender might be needed):![f2.png](https://archive.blender.org/developer/F9829053/f2.png) If Blender the application is specified in the __Wacom driver__,make sure the "__Use Windows Ink__" check box is on in the __Mapping__ tab,according to [Wacom Guide ](https://www.wacom.com/en-au/support?guideTitle=Why-is-my-pen-drawing-or-a-keyboard-opening-automatically-in-Windows-10%3F&guideId=682) this setting will let the tablet get the proper pressure input ( if the setting is not checked,stylus will have no pressure in Blender) : ![f3.png](https://archive.blender.org/developer/F9829067/f3.png) If Blender is not specified in the __Wacom driver__,check "__Use Windows Ink__" setting in the "__All Other Applications__" __Mapping__ tab. Issue happens while the __Tablet API__ in Blender is set to __Wintab__.

All: this build reverts changes to that caused this issue. Please +1 if this fixes things for you or comment if there is still an issue.

All: [this build](https://blender.community/c/graphicall/lsbbbc/) reverts changes to that caused this issue. Please +1 if this fixes things for you or comment if there is still an issue.
Author

In #85844#1117427, @PrototypeNM1 wrote:
All: this build reverts changes to that caused this issue. Please +1 if this fixes things for you or comment if there is still an issue.

Glitches(#85733) are gone for me (Tablet API changed to Wintab/Automatic).
The pressure error is still there when I use Wintab/Automatic Tablet API.

> In #85844#1117427, @PrototypeNM1 wrote: > All: [this build](https://blender.community/c/graphicall/lsbbbc/) reverts changes to that caused this issue. Please +1 if this fixes things for you or comment if there is still an issue. Glitches(#85733) are gone for me (Tablet API changed to Wintab/Automatic). The pressure error is still there when I use Wintab/Automatic Tablet API.

Added subscribers: @JeannotLandry, @filedescriptor

Added subscribers: @JeannotLandry, @filedescriptor

Added subscriber: @BlenderPretender

Added subscriber: @BlenderPretender

Updated build to test, I don't think it will fix the issue but it would rule out a large section of code as the problem.

Edit: the above build should fix things.

[Updated build ](https://blender.community/c/graphicall/lsbbbc/) to test, ~~I don't think it will fix the issue but it would rule out a large section of code as the problem~~. Edit: the above build should fix things.

This issue was referenced by ee4f306509

This issue was referenced by ee4f306509679cf4aacb5367680f13044db60ea8

This issue was referenced by 37afeb7eaa

This issue was referenced by 37afeb7eaa8c2965fa4348b66b6ef600b7a3769a

Falk David, I tried the test build provided on the referenced task (#85844) and the problem with the pressure sensitivity was resolved.

Nicholas Rishel, I downloaded the test build provided by your link on task (#85844) at: https://blender.community/c/graphicall/lsbbbc/.
Please be advised, my virus scanner found and deleted two files from that build. Attached is a screen capture of the files that were deleted. I do not know if those are standard Blender files or actually malicious as the scanner suggests. Just be advised.Capture.PNG

Falk David, I tried the test build provided on the referenced task (#85844) and the problem with the pressure sensitivity was resolved. Nicholas Rishel, I downloaded the test build provided by your link on task (#85844) at: https://blender.community/c/graphicall/lsbbbc/. Please be advised, my virus scanner found and deleted two files from that build. Attached is a screen capture of the files that were deleted. I do not know if those are standard Blender files or actually malicious as the scanner suggests. Just be advised.![Capture.PNG](https://archive.blender.org/developer/F9832214/Capture.PNG)

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.92 milestone 2023-02-08 16:14:50 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85844
No description provided.